# sc4-python-framework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SC4PythonFramework.def  pyproject.toml  setup_deps.py  setup_submodules.bat
.clion/: build-targets.xml  cmake-build-configurations.xml
src/cpp/: PythonFrameworkDllDirector.cpp
src/cpp/python/: PythonBindings.cpp  PythonManager.cpp  PythonManager.h
src/cpp/utils/: Logger.cpp  Logger.h
src/cpp/wrappers/: CityWrapper.cpp  CityWrapper.h
src/python/: plugin_loader.py  sc4_logger.py  sc4_plugin_base.py  sc4_types.py  uv_manager.py
src/python/examples/: __init__.py  basic_cheats.py  city_analyzer.py  logging_demo.py  pyproject.toml  simple_cheat_test.py
